tests/dynamic_import/dynamic_import.exp
Error ------------------------------------------------------------------------------------------------------ test.js:4:4

Cannot cast `esmodule.pi` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:4:4
   4|   (esmodule.pi: string); // error
         ^^^^^^^^^^^

References:
   esmodule.js:3:19
   3| export const pi = 3.14;
                        ^^^^ [1]
   test.js:4:17
   4|   (esmodule.pi: string); // error
                      ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:5:12

Cannot get `esmodule.default` because property `default` is missing in module `./esmodule` [1]. [prop-missing]

   test.js:5:12
   5|   esmodule.default; // error
                 ^^^^^^^

References:
   esmodule.js
   ^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:8:20

Cannot get `esmodulePromise.pi` because property `pi` is missing in `Promise` [1]. [prop-missing]

   test.js:8:20
   8|   (esmodulePromise.pi: string); // error
                         ^^

References:
   test.js:7:27
   7|   const esmodulePromise = import('./esmodule');
                                ^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:15:4

Cannot cast `cjsmodule.pi` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:15:4
   15|   (cjsmodule.pi: string); // error
          ^^^^^^^^^^^^

References:
   cjsmodule.js:4:7
    4|   pi: 3.14
             ^^^^ [1]
   test.js:15:18
   15|   (cjsmodule.pi: string); // error
                        ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:16:4

Cannot cast `cjsmodule.default` to number because object literal [1] is incompatible with number [2].
[incompatible-cast]

   test.js:16:4
   16|   (cjsmodule.default: number); // error
          ^^^^^^^^^^^^^^^^^

References:
   cjsmodule.js:3:18
                        v
    3| module.exports = {
    4|   pi: 3.14
    5| };
       ^ [1]
   test.js:16:23
   16|   (cjsmodule.default: number); // error
                             ^^^^^^ [2]



Found 5 errors
